widget: Always call gtk_widget_show_all

Since spice-gtk 0.32 SpiceDisplay widget internally has changed
from the GtkDrawingArea to a GtkContainer.

Per gtk_widget_show documentation:
 "Remember that you have to show the containers containing a widget,
  in addition to the widget itself, before it will appear onscreen."

Let's always call gtk_widget_show_all, not just for gtk+ >= 3.16
otherwise you may get a blackscreen with spice-gtk compiled against
an old gtk+ version.

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=100251

Acked-by: Christophe Fergeau <cfergeau@redhat.com>